fixed image card alignment and added underline to header

--- a/src/components/pages/Projects/style.css
+++ b/src/components/pages/Projects/style.css
@@ -1,33 +1,20 @@
 #projects {
     height: 100vh;
+    background-color: rgba(93, 93, 93, 0.397);
 }
 
 #projectsToggle {
     height: 7vh;
 }
 
-.proj-div {
-    width: 72vw;
-    background-color: rgba(255, 255, 255, 0.85);
-    height: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    padding: 15px;
-    margin-bottom: 50px;
+#projectsHeader {
+    text-align: center;
+    margin-bottom: 15px;
+    border-bottom: solid rgb(0, 173, 144);
 }
 
-#bottom-proj-div {
-    width: 72vw;
-    background-color: rgba(255, 255, 255, 0.85);
-    height: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    padding: 15px;
-}
-
-.proj-img {
-    width: 90%;
-    margin: 15px;
+.card-img {
+    height: 100%;
 }
 
 .proj-description {
@@ -58,13 +45,4 @@
     color: white;
     border: none;
     width: 250px;
-}
-
-#galaxy-play {
-    margin-bottom: 10px;
-    height: 50px;
-}
-
-#galaxy-code {
-    height: 50px;
 }
